Monolith vs MicroServices/monolith-service.yml
apiVersion: v1
kind: Service
metadata:
  name: monolith-service
spec:
  selector:
    app: my-monolith
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
