Monolith vs MicroServices/monolith-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monolith-service
            port:
              number: 80
